<resources>
    <string name="app_name">Testing</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Registration</string>


</resources>