<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey"
        android:gravity="center"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login">
        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/green_nanggung"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="26dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="47dp">
        </EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/sign_in"
            android:textColor="@color/green_text"
            android:textStyle="bold"
            android:layout_marginBottom="18dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="90dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_create_button"
            android:text="@string/create_account"
            android:textColor="@color/green_text"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginHorizontal="90dp"
            android:layout_marginBottom="18dp">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            android:layout_marginHorizontal="131dp"
            android:gravity="center">

        </TextView>

    </LinearLayout>




</LinearLayout>